# Learn-Western-Astrology

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  rag.py
app/agent/: __init__.py  graph.py  prompts.py  tools.py
app/api/: main.py
app/ingestion/: __init__.py  books.py  cache.py  chunk.py  embed.py  parse.py  store.py
app/llm/: __init__.py  gateway.py
app/obs/: __init__.py  tracing.py
app/retrieval/: __init__.py  metrics.py  query.py  search.py  splade.py
db/: schema.sql
eval/: dataset.jsonl  retrieval_cases.jsonl  retrieval_eval.py  retrieval_gold.jsonl  retrieval_metrics.py  run_ragas.py
scripts/: analyze_sections.py  analyze_structure.py  chunk_report.py  test_retrieval.py
tests/: test_agent.py  test_chunk.py  test_config.py  test_metrics.py  test_query.py  test_rag.py  test_splade_prune.py
