[project]
name = "learn-western-astrology"
version = "0.1.0"
description = "An open-source agent that teaches Western astrology and answers grounded questions (RAG + ephemeris tools)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }

dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sse-starlette>=2.1",
    # Ingestion
    "pymupdf>=1.24",
    "tiktoken>=0.8",
    # Numeric helper (chunk.py median); kept <2 for torch 2.2.2 + the eval stack.
    "numpy<2",
    # Local SPLADE sparse encoder (learned sparse lexical retrieval, torch/CPU).
    # Intel-Mac pins: torch caps at 2.2.2 (last x86_64-macOS wheel) which needs
    # numpy<2; transformers<4.49 avoids the CVE-2025-32434 .bin-load guard.
    "torch==2.2.2",
    "transformers>=4.44,<4.49",
    # Vector store (Supabase Postgres + pgvector)
    "psycopg[binary]>=3.2",
    "pgvector>=0.3",
    # LLM gateway (provider-agnostic; Groq by default)
    "litellm>=1.52",
    # Agentic layer (Phase 1): LangGraph orchestration + LangChain's OpenAI
    # chat model (native tool calling). Pinned to the 0.2.x / 0.3-core line
    # because that's what coexists with the langchain==0.3.x the eval extra
    # pins for Ragas 0.4 (see [project.optional-dependencies].eval below).
    "langgraph>=0.2,<0.3",
    "langchain-openai>=0.2,<0.3",
    # Observability
    "langfuse>=2.53",
    # CLI / UX
    "typer>=0.12",
    "rich>=13.9",
]

[project.optional-dependencies]
eval = [
    "ragas>=0.4,<0.5",
    "datasets>=3.0",
    # Ragas 0.4 needs the langchain 0.3.x line (1.x removed ChatVertexAI from
    # langchain_community, which ragas imports at load time).
    "langchain>=0.3,<0.4",
    "langchain-core>=0.3,<0.4",
    "langchain-community>=0.3,<0.4",
    "langchain-openai>=0.2,<0.3",
]
dev = [
    "ruff>=0.7",
    "pytest>=8.3",
]

[project.scripts]
astro = "app.cli:app"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
# Defaults (E, F) plus import sorting (I) and a few modern-Python lints.
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# PyMuPDF's SWIG bindings emit import-time DeprecationWarnings we don't control.
filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
